--- a/index.html
+++ b/index.html
@@ -30,34 +30,32 @@
       <div class="pure-u-2-3">
         <div id="usawages" class="vis-container"></div>
       </div>
-
       <div class="pure-g">
+        </div>
+        <div class="pure-u-1-3">
+          <div id="california"  class="vis-container"></div>
+          <div id="newyork"  class="vis-container"></div>
+          </div>
+          <div class="pure-u-1-3">
+            <div id="texas"  class="vis-container"></div>
+            <div id="florida"  class="vis-container"></div>
+            </div>
+            <div class="pure-u-1-3">
+              <div class="description description-right">
+              <h2>Deeper Look at top performing states vs the USA average</h2>
+              <p>Here we take a deeper view at how the top states in terms of wages paid stack up against the average as represented by the red line. You can see in detail how much of an anamoly the state of California is, this may be due it's population or minimum wage laws that are higher than other states, however that is ann idea worth exploring.</p>
+            </div>
+        </div>
+      <div class="pure-g">
+        <div class="pure-u-1-3">
+          <div class="description description-left">
+            <h2>Viewing how much the average employee actually makes</h2>
+            <p>Taking a step back, we look at different metric that is more curucial to the average employee. What is very interesting is that even though some of the top states that pay the most amount of wages, may have shockingly low pay per employee. Such as Florida, that pays on average 55k USD. This may be due to state laws on minimum wage, or they may be other reasonns worth exploring. A very interesting outlier is the District of Colombia, which is not technically a state, however it employs top paid employees of the govrnment such as the president, senators and representitives. </p>
+          </div>
+        </div>
         <div class="pure-u-2-3">
           <div id="bubbleplot"  class="vis-container"></div>
         </div>
-        <div class="pure-u-1-3">
-          <div class="description description-right">
-            <h2>Viewing how much the average employee actually makes</h2>
-            <p>What is very interesting is that even though some of the top states that pay the most amount of wages, may have shockingly low pay per employee. Such as Florida, that pays on average 55k USD. This may be due to state laws on minimum wage, or they may be other reasonns worth exploring. A very interesting outlier is the District of Colombia, which is not technically a state, however it employs top paid employees of the govrnment such as the president, senators and representitives. </p>
-          </div>
-        </div>
-
-        <div class="pure-g">
-          <div class="pure-u-1-3">
-            <div class="description description-left">
-            <h2>Looking at top performing states vs the USA average</h2>
-            <p>Here we view how the top states in terms of wages paid stack up against the average as represented by the red line. You can see how much of an anamoly the state of California is, this may be due it's population or minimum wage laws that are higher than other states, however that is ann idea worth exploring.</p>
-          </div>
-          </div>
-          <div class="pure-u-1-3">
-            <div id="california"  class="vis-container"></div>
-            <div id="newyork"  class="vis-container"></div>
-            </div>
-            <div class="pure-u-1-3">
-              <div id="texas"  class="vis-container"></div>
-              <div id="florida"  class="vis-container"></div>
-              </div>
-          </div>
       
     </div>
   </div>
